[project]
name = "rhoney-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Ronaldo Martins",email = "ronaldorhoney@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.44.0,<0.45.0)"
tapi


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
